# Cinema_DRF

./: .gitignore  README.md
api/: Dockerfile  pyproject.toml
api/core/: serializers.py  settings.py  urls.py
api/core/fixtures/: movieGenre_fixture.json  movie_fixture.json  person_fixture.json
api/movie/: admin.py  mixins.py  models.py  urls.py  utils.py  views.py  viewsets.py
api/movie/migrations/: 0001_initial.py  0002_alter_moviegenre_name_alter_person_date_of_birth_and_more.py
compose/: docker-compose.yaml
