[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["SCVRLET"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0.3"
djangorestframework = "^3.13.1"
autopep8 = "^1.6.0"
psycopg2 = "^2.9.3"
django-environ = "^0.8.1"
Pillow = "^9.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
